fix: prevent modal overflow

--- a/Shopping-Cart/src/components/DeliveryModal/delivery-modal.module.css
+++ b/Shopping-Cart/src/components/DeliveryModal/delivery-modal.module.css
@@ -4,12 +4,12 @@
 	left: 100%;
 	top: 0px;
 	width: 80%;
-    transition: 0.7s ease-in-out;
-    padding: 20px;
+	transition: 0.7s ease-in-out;
 }
 
 .showDeliveryModal {
 	left: 0px;
+	position: relative;
 	transition: 0.7s ease-in-out;
 	transition-delay: 0.3s;
 }
@@ -17,3 +17,4 @@
 input {
 	background-color: white;
 }
+
